--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 body {
    width: 100%;
-   height: 100%;
+   height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -15,6 +15,7 @@ body {
 .music-player{
    width: 350px;
    height: 550px;
+   border-radius: 20px;
    background: rgb(209, 205, 205);
    box-shadow: 0 40px 100px rgb(82, 82, 82);
    padding: 30px;
