--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,21 @@ font-size: 14px;
    position: absolute;
    right: 0;
 }
+
+.controls{
+   width: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin: auto;
+   margin-top: 20px;
+}
+.play-btn {
+   position: relative;
+   width: 60px;
+   height: 60px;
+   border-radius: 50%;
+   background: #d5eebb;
+   cursor: pointer;
+   border: none;
+}
