--- a/css/style.css
+++ b/css/style.css
@@ -115,11 +115,38 @@ font-size: 14px;
    left: 25%;
    transform: translateY(-50%);
    width: 10px;
-   height: 20px;
+   height: 30px;
    background-color: #5f7461;
    transition: all 0.5s;
+   clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
 }
 .play-btn span:nth-child(2) {
    left: 55%;
    transform-origin: center;
+}
+.play-btn.pause span:nth-child(2) {
+   transform: translateY(-50%) scaleY(0);
+}
+.play-btn.pause span:nth-child(1) {
+    width: 35%;
+    height: 53%;
+    transform: translate(30%, -50%);
+    border-radius: 0;
+    clip-path: polygon(100% 50%, 0 0, 0 100%);
+}
+
+.play-btn.pause{
+   animation: pulse 2s linear infinite;
+}
+
+@keyframes pulse {
+   0% {
+      box-shadow: 0;
+   }
+   50%{
+      box-shadow: 0 0 0 5px rgba(255,255,255,0.1);
+   }
+   100% {
+      box-shadow: 0 0 0 5px rgba(255,255,255,0.4);
+   }
 }
