button list click

--- a/css/root.css
+++ b/css/root.css
@@ -15,3 +15,15 @@
    margin: 10px;
    border-radius: 20px;
 }
+
+.btn {
+   border: none;
+   outline: none;
+   padding: 10px 16px;
+   background-color: #f1f1f1;
+   cursor: pointer;
+   font-size: 18px;
+ }
+.active {
+   background-color: green;
+ }
